--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +15,7 @@
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "express-partials": "^0.3.0",
+    "express-session": "^1.15.2",
     "redis": "^2.7.1"
   }
 }
