--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "body-parser": "^1.17.1",
     "connect-flash": "^0.1.1",
     "connect-redis": "^3.2.0",
+    "cookie": "^0.3.1",
     "cookie-parser": "^1.4.3",
     "csurf": "^1.9.0",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "express-partials": "^0.3.0",
     "express-session": "^1.15.2",
-    "redis": "^2.7.1"
+    "jquery": "^3.2.1",
+    "redis": "^2.7.1",
+    "socket.io": "^1.7.3"
   }
 }
